public/stylesheets/ui/documents.css
#document_list {
  position: relative;
  padding: 25px 27px 50px;
}
  body.minidocs #document_list {
    padding: 35px 20px 50px;
  }

.document {
  position: relative;
}
  .document.muted {
    background: transparent;
  }
  #document_list .document {
    min-height: 80px;
    padding: 2px 30px 5px 90px;
    margin-bottom: 20px;
    font: 11px/14px Arial;
  }
    body.minidocs #document_list .document {
      float: left;
      min-height: 0;
      height: 44px; width: 165px;
      text-align: center;
      padding: 92px 10px 0 10px;
      margin: 0 20px 30px 0;
    }
    #document_list .document.owns_notes,
    #document_list .document.has_notes {
      min-height: 96px;
    }
  img.doc {
    cursor: pointer;
    background: #fff;
    position: absolute;
    width: 60px; height: 75px;
    padding: 1px;
    border: 1px solid #b4b4b4;
    box-shadow: 2px 2px 0 #e7e7e7; -webkit-box-shadow: 2px 2px 0 #e7e7e7; -moz-box-shadow: 2px 2px 0 #e7e7e7;
  }
    body.minidocs .document img.doc {
      margin-left: 56px;
    }
    img.page_image {
      width: 40px; height: 50px;
      border: 1px solid #b4b4b4;
      box-shadow: 2px 2px 0 #e7e7e7; -webkit-box-shadow: 2px 2px 0 #e7e7e7; -moz-box-shadow: 2px 2px 0 #e7e7e7;
    }
  .document .mini_note {
    position: absolute;
    top: 13px; left: -3px;
    opacity: 0.85;
  }
    body.minidocs .document .mini_note {
      left: 53px;
    }
  .document .select {
    position: absolute;
    left: 0px; top: 0px;
    width: 70px; height: 85px;
    -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px;
  }
    body.minidocs .document .select {
      margin-left: 56px;
    }
    .document.is_selected .select {
      background: #09f;
    }
  .document img.doc {
    left: 3px; top: 3px;
  }
    .document.is_selected img.doc {
      border-color: transparent;
      box-shadow: none; -webkit-box-shadow: none; -moz-box-shadow: none;
    }
  .document .title {
    display: block;
    color: #000;
    font: bold 16px/20px Arial;
    margin-bottom: 10px;
    min-height: 20px;
  }
    body.minidocs .document .title {
      font: bold 11px/14px Arial;
      overflow: hidden;
      min-height: 14px;
      max-height: 28px;
      margin-bottom: 0;
    }
    .document .doc_title {
      cursor: pointer;
    }
      .document .hoverable:hover .doc_title {
        text-decoration: underline;
      }
    .document .document_tool {
      display: inline;
      vertical-align: top;
      margin-left: 8px;
      padding-right: 16px;
      opacity: 0.5;
      -webkit-transition: opacity 0.2s linear;
    }
      .document:hover .document_tool {
        opacity: 1;
      }
      body.minidocs .document .document_tool {
        position: absolute;
        top: 8px; left: 118px;
      }
      .document .document_tool.spinner {
        display: block;
        margin: 0; padding: 0;
        position: absolute;
        left: 27px; top: 50px;
      }
        body.minidocs .document .document_tool.spinner {
          top: 50px; left: 83px;
        }
  .document .metalines {
    font-size: 10px;
    margin-bottom: 4px;
    color: #999;
  }
    body.minidocs .document .metalines {
      display: none;
    }
    .document.pending_access .page_count {
      display: none;
    }
  .document .description {
    font: 13px/18px Georgia;
    color: #555;
    margin-bottom: 3px;
  }
    body.minidocs .document .description {
      display: none;
    }
    .document .description b {
      font-size: 12px;
    }
    .document.error_access .description {
      font-style: italic;
      color: #844;
    }
      .document.error_access .email {
        color: #000;
      }
  .document .show_notes {
    cursor: pointer;
    position: absolute;
    left: 7px; top: 90px;
    width: 60px;
    text-align: center;
  }
    body.minidocs .document .show_notes {
      position: static;
      width: auto;
    }
    .document.has_notes .show_notes {
      text-align: left;
    }
    .document .show_notes .cancel_search {
      float: left;
      margin: 2px 5px 0 0;
      display: none;
    }
      .document.has_notes .show_notes .cancel_search {
        display: block;
      }

/*---------------------------- Page References -------------------------------*/
.document .pages {
  overflow: hidden;
}
.document .pages_title {
  margin: 15px 0 15px 0;
  line-height: 11px;
}
  .document .pages .pages_title_inner {
    float: left;
    margin-right: 10px;
  }
  .document .pages .cancel_search {
    float: left;
    cursor: pointer;
    display: none;
  }
    .document .pages:hover .cancel_search {
      display: block;
    }
.document .page {
  float: left;
  margin: 0 20px 15px 3px;
  text-align: center;
  cursor: pointer;
}
  .document .page_number {
    color: #555;
  }


/*------------------------------ ANNOTATIONS ---------------------------------*/
.document .notes {
  display: none;
  padding-bottom: 5px;
}
  .document.has_notes .notes {
    display: block;
  }
  .note {
    position: relative;
    margin: 20px 0 0 0;
    padding: 15px;
    font: 12px/18px Arial;
    color: #555;
  }
    .note .edit, .note .display {
      display: none;
    }
      .note.display_visible .display,
      .note.edit_visible .edit {
        display: block;
      }
    .note .note_background {
      position: absolute;
      background: white;
      top: 0; left: 0; bottom: 0; right: 0;
      border: 5px solid #efd12d;
      -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;
      -webkit-box-shadow: 0 0px 15px #777; -moz-box-shadow: 0 0px 15px #777;
    }
      .note.private_access .note_background {
        border-color: #68d5ef;
      }
    .note .note_contents {
      position: relative;
      overflow: hidden;
    }
      .note .note_title {
        color: #000;
        font-weight: bold;
        margin-bottom: 10px;
      }
        .note .title_link {
          cursor: pointer;
        }
      .note .note_title_edit {
        width: 300px;
        margin-bottom: 10px;
      }
      .note .page_number {
        cursor: pointer;
        font: bold 10px/12px Arial;
        color: black;
        float: right;
      }
      .note .note_text {
        color: #333;
        font: 13px/18px Georgia;
      }
      .note .note_text_edit_wrap {
        position: relative;
        margin-right: 10px;
      }
        .note .note_text_edit {
          height: 100px;
          width: 100%;
          font: 12px/18px Arial;
        }
      .note .note_excerpt_wrap {
        border: 1px solid #d0d0d0;
        text-align: center;
        margin-bottom: 10px;
      }
        .note .note_excerpt {
          position: relative;
          margin: 0 auto;
          width: 750px;
          overflow: hidden;
        }
          .note .left_cover,
          .note .right_cover {
            position: absolute;
            z-index: 5;
            background: white;
            opacity: 0.68;
            filter: alpha(opacity=68);
          }
            .note .left_cover {
              left: 0;
            }
            .note .right_cover {
              right: 0;
            }
          .note .note_image {
            left: 0;
            position: absolute;
          }
      .note .edit_note {
        display: inline;
        vertical-align: top;
        cursor: pointer;
        opacity: 0;
        -webkit-transition: opacity 0.2s linear;
        padding-right: 11px;
        margin-left: 5px;
        position: relative;
        top: -1px;
      }
        .note:hover .edit_note {
          opacity: 1;
        }
      .note .note_controls {
        height: 36px;
      }
        .note .note_controls .minibutton {
          margin: 10px 0 0 0;
          width: 60px;
        }
          .note .note_controls .cancel_note {
            margin-right: 10px;
          }

